# Beam2D-Engine

./: CMakeLists.txt  README.md
examples/bouncing-ball/: BouncingBall.cpp  BouncingBall.h
src/: BouncingBall.cpp  BouncingBall.h  main.cpp
src/Core/: GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h
src/Core/Scenes/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/Core/Utils/: Debug.cpp  Debug.hpp  DebugConsole.cpp  DebugConsole.h
